@@ -1,3 +1,7 @@
+2017-11-07  Rolf Ade  <rolf@pointsman.de>
+
+        New flag -keepCDATA for [dom parse ...].
+
 --- Release 0.9.0, 24. Aug. 2017 --- 
 
 2017-08-21 Ashok Nadkarni
